--- a/views/index.html
+++ b/views/index.html
@@ -64,8 +64,10 @@
   <script type="text/javascript" src="/vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <script type="text/javascript" src="/vendor/angular-sanitize/angular-sanitize.js"></script>
   <script type="text/javascript" src="/vendor/angular-touch/angular-touch.js"></script>
+  <script type="text/javascript" src="/vendor/angular-resource/angular-resource.min.js"></script>
 
   <!-- YOUR SCRIPTS -->
   <script type="text/javascript" src="/app.js"></script>
   <script type="text/javascript" src="/controllers.js"></script>
+  <script type="text/javascript" src="/services.js"></script>
 </html>
